<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/settings" android:title="@string/settings" android:icon="@drawable/ic_menu_manage"></item>
    <item android:id="@+id/logout" android:title="@string/logout" android:icon="@drawable/ic_menu_stop"></item>
    <item android:id="@+id/eventlog" android:title="@string/eventlog" android:icon="@drawable/ic_menu_recent_history"></item>
    <item android:id="@+id/getKeys" android:title="Request Keys" android:icon="@drawable/ic_lock_lock"></item>
    <item android:id="@+id/viewtrip" android:title="@string/viewtrip" android:icon="@drawable/ic_menu_compass"></item>
    <item android:id="@+id/discovery" android:title="@string/na" android:icon="@drawable/ic_menu_compass"></item>

    

</menu>