<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/generalInfo"
	    android:stretchColumns="*"/>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:stretchColumns="0,1">
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/uid"
                android:textSize="12dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="12dp"/>
        </TableRow>

        <TableRow><!-- VALUE -->
            <TextView
                android:id="@+id/devUID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na"/>
            <TextView
                android:id="@+id/devType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/na"/>
        </TableRow>
        
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signal"
                android:textSize="12dp"/>
            <TextView
                android:id="@+id/textView6"
                android:text="@string/rxAck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12dp"/>
        </TableRow>

        <TableRow><!-- VALUE -->
            <TextView
                android:id="@+id/rssiVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na"/>
            <TextView
                android:id="@+id/ackNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/na"/>
        </TableRow>
		
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gps"
                android:textSize="12dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txAck"
                android:textSize="12dp"/>
        </TableRow>

        <TableRow><!-- VALUE -->
            <TextView
                android:id="@+id/gpsLoc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/na"/>
            <TextView
                android:id="@+id/txAckNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/na"/>
        </TableRow>
        
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/conveyance"
                android:textSize="12dp"/>
        </TableRow>
        
        
        <TableRow><!-- VALUE -->
            <TextView
                android:layout_span="2"
                android:id="@+id/conveyanceID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/na"/>
        </TableRow>

    </TableLayout>
	 
	<TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:stretchColumns="*">
	    <TableRow>
		    <TextView  
		        android:layout_marginTop="10dp"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			   	android:text="@string/error_alarm"/>
        </TableRow>

        <TableRow>
	        <CheckBox 
		        android:id="@+id/lockOpenBox"
		        android:text="@string/error_lockOpen"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
			<CheckBox 
		        android:id="@+id/haspOpenBox"
		        android:text="@string/error_haspBroken"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
        </TableRow>
        
        <TableRow>
			<CheckBox 
		        android:id="@+id/offCourseBox"
		        android:text="@string/error_offRoute"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
			<CheckBox 
		        android:id="@+id/offScheduleBox"
		        android:text="@string/error_offschedule"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
        </TableRow>

	     <TableRow>
			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
		    	android:text="@string/error_device"/>
        </TableRow>

        <TableRow>
			<CheckBox 
		        android:id="@+id/configMalfunctionBox"
		        android:text="@string/error_configMalfunction"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
			<CheckBox 
		        android:id="@+id/insuficientPowerBox"
		        android:text="@string/error_power"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
        </TableRow>
        
        <TableRow>
			<CheckBox 
		        android:id="@+id/commisionFailedBox"
		        android:text="@string/error_commfailed"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
			<CheckBox 
		        android:id="@+id/timeNotSetBox"
		        android:text="@string/error_timenotset"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
        </TableRow>

        <TableRow>
			<CheckBox 
		        android:id="@+id/sensorMalfunctionBox"
		        android:text="@string/error_sensorMalfunction"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
			<CheckBox 
		        android:id="@+id/decryptionErrorBox"
		        android:text="@string/error_decryption"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
		</TableRow>
		
        <TableRow>
			<CheckBox 
		        android:id="@+id/invalidCommandBox"
		        android:text="@string/error_invalidCmd"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
			<CheckBox 
		        android:id="@+id/logOverflowBox"
		        android:text="@string/error_logOverflow"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
		</TableRow>
		
        <TableRow>
			<CheckBox 
		        android:id="@+id/ackFailureBox"
		        android:text="@string/error_ack"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
			<CheckBox 
		        android:id="@+id/configFailedBox"
		        android:text="@string/error_config"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
		</TableRow>
		
        <TableRow>
			<CheckBox 
		        android:id="@+id/sensorEnableFailedBox"
		        android:text="@string/error_sensorenable"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:textSize="12dp"/>
		</TableRow>
        
	</TableLayout>

</LinearLayout>

</ScrollView>