<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/signal" 
            android:textSize="12sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/uid" 
            android:textSize="12sp" />
        <TextView  
		    android:layout_width="100dp" 
		    android:layout_height="wrap_content" 
		    android:textSize="12sp"
		    android:text="@string/type" />
	</LinearLayout>
	<ListView
        android:id="@+id/devicesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>

