<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
    
<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/tableLayout1"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" 
	android:stretchColumns="1">
       
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hnadUID"/>
        <EditText
            android:id="@+id/thisUID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hnadUID"
            android:enabled="false"
            android:singleLine="true"/>
    </TableRow>
       
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dcpUID"/>
        <EditText
            android:id="@+id/dcpUID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/dcpUID"
            android:enabled="false"
            android:singleLine="true"/>
    </TableRow>
    
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Authentication Host"/>
        <EditText
            android:id="@+id/authHost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Authentication Host"
            android:singleLine="true"/>
    </TableRow>
    
       
	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dcpAddrs"/>
	    <EditText
	        android:id="@+id/dcpServer"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:enabled="false"
	        android:hint="@string/dcpAddrs"
	        android:singleLine="true"/>
	</TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/useEnc"/>
        <CheckBox 
			android:id="@+id/ecryptionOn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
    </TableRow>
    
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nadaPrompt"/>
        <Spinner 
			android:id="@+id/nadaRate"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/nadaPrompt"/>
    </TableRow>
       
</TableLayout>

</ScrollView>